--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -526,6 +526,24 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**The labels on the trees ARE confusing**\n",
+    "- Artifact of the program that constructs the tree\n",
+    "- Consider the label:\n",
+    "    - `Sex is Female <= 0.5`\n",
+    "    - This is an awkward way of saying\n",
+    "        - `Is Female` == 0, since `Is Female` $\\in \\{ 0, 1 \\}$\n",
+    "        - `Is not Female`\n",
+    "        - `Is Male`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -638,7 +656,7 @@
     "        - 109 with `Survived` == Yes\n",
     "    \n",
     "- Right child of root $\\#2$:\n",
-    "    - `samples = 314`: This is the subset of $S_{\\#0}$ (training set) consisting of the 577 `Female` examples\n",
+    "    - `samples = 314`: This is the subset of $S_{\\#0}$ (training set) consisting of the 314 `Female` examples\n",
     "    - `values = [81, 233]`\n",
     "    - The examples of $S_{\\#2}$  can be divided  into\n",
     "        - 81 with `Survived` == No\n",
@@ -661,32 +679,6 @@
     "\n",
     "\"No\" is colored orange\n",
     "\"Yes\" is colored blue"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "**Digression**\n",
-    "\n",
-    "The question\n",
-    ">\"Is $\\x$ *non* Female ?\" \n",
-    "-- encoded via the test: `Sex is female <= 0.5`\n",
-    "\n",
-    "is a bit contorted.\n",
-    "\n",
-    "This is an artifact of the categorical feature `Sex` being replaced by binary features $\\text{Is}_\\text{Female}, \\text{Is}_\\text{Male}$.\n",
-    "\n",
-    ">`Sex is female <= 0.5`\n",
-    "\n",
-    "represents $$\\text{Is}_\\text{Female} == 0$$\n",
-    "hence my translation to \"non Female\".\n",
-    "\n",
-    "If the categorical variable had more than 2 classes, this test would appear less contorted."
    ]
   },
   {
@@ -1320,7 +1312,7 @@
     }
    },
    "source": [
-    "#### The \"best\" ($j,k)$ split: From Gini of children, to Cost for split at parent\n",
+    "#### The \"best\" $(j,k)$ split: From Gini of children, to Cost for split at parent\n",
     "\n",
     "Let node $\\node{n}$ \n",
     "- Have child nodes $\\node{n}_L, \\node{n}_R$\n",
@@ -1662,10 +1654,23 @@
     }
    },
    "source": [
-    "The deeper tree results in a very complex \"line\".\n",
+    "Consider the blue line of the left figure, produced by a Decision Tree of depth 2:\n",
     "\n",
-    "Here is the shallower (depth 2) tree, corresponding to the graph on the left.\n",
-    "- Each test partitions the horizontal axis"
+    "$$\n",
+    "\\hat{\\y}^\\ip = \n",
+    "\\left\\{\n",
+    "    {\n",
+    "    \\begin{array}{lll}\n",
+    "     0 & \\textrm{if } &          & \\x^\\ip &       \\le 0.408  \\\\\n",
+    "     1  & \\textrm{if }&  0.408 < & \\x^\\ip & \\le 3.186 \\\\\n",
+    "     -0.472  & \\textrm{if } & 3.186 <  &\\x^\\ip & \\le 3.758 \\\\\n",
+    "     \\vdots\n",
+    "    \\end{array}\\\\\n",
+    "    }\n",
+    "\\right.\n",
+    "$$\n",
+    "\n",
+    "corresponding to the Decision Tree:"
    ]
   },
   {
@@ -1691,6 +1696,22 @@
    ],
    "source": [
     "trees_fig[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The deeper Decision Tree (right figure) results in a very complex \"line\"\n",
+    "- It's fit has less error\n",
+    "- But may be highly over fit\n",
+    "\n",
+    "An overfit model may  more closely match the *training* examples\n",
+    "- But fail to generalize (out of sample) as well as a simpler model\n"
    ]
   },
   {
@@ -1805,7 +1826,7 @@
     "width": "358.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
