--- a/Index.ipynb
+++ b/Index.ipynb
@@ -192,7 +192,9 @@
     "    - Bagging and Boosting\n",
     "    - Random Forests\n",
     "- Naive Bayes: a simple but effective model\n",
-    "    \n",
+    "\n",
+    "**Last week's topics, more in depth**\n",
+    "- More on [Imbalanced data](Imbalanced_Data.ipynb)\n",
     "- [Entropy, Cross Entropy, and KL Divergence](Entropy_Cross_Entropy_KL_Divergence.ipynb)\n",
     "\n",
     "**Decision Trees, Ensembles**\n",
@@ -206,6 +208,42 @@
     "- [Naive Bayes](Naive_Bayes.ipynb)\n",
     "\n",
     "**Deeper Dives**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "    \n",
+    "**Plan**\n",
+    "\n",
+    "- Support Vector Classifiers: a classifier with an interesting twist\n",
+    "- Gradient Descent: our tools for solving optimization problems\n",
+    "- Interpretation: understanding models\n",
+    "\n",
+    "\n",
+    "**Support Vector Classifiers**\n",
+    "- [Support Vector Machines: Overview](SVM_Overview.ipynb)\n",
+    "- [SVC Loss function](SVM_Hinge_Loss.ipynb)\n",
+    "- [SVC: Large Margin Classification](SVM_Large_Margin.ipynb)\n",
+    "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
+    "- [SVM Wrapup](SVM_Coda.ipynb)\n",
+    "     \n",
+    "**Gradient Descent**\n",
+    "- [Gradient Descent](Gradient_Descent.ipynb)\n",
+    "\n",
+    "**Interpretation**\n",
+    "- [Interpretation: Linear Models](Linear_Model_Interpretation.ipynb)\n",
+    "  \n",
+    "        \n",
+    "**Deeper Dives**\n",
+    "- [SVC Loss function derivation](SVM_Derivation.ipynb)\n",
+    "- [Missing Data](Missing_Data.ipynb)\n",
+    "\n"
    ]
   },
   {
