--- a/Naive_Bayes.ipynb
+++ b/Naive_Bayes.ipynb
@@ -1553,8 +1553,11 @@
     }
    },
    "source": [
-    "**Answer**: Because the table can be big !\n",
-    "- One entry for every possible combination of features\n",
+    "**Answers**: \n",
+    "- Because the table can be big !\n",
+    "    - One entry for every possible combination of features\n",
+    "- Can't interpolate\n",
+    "    - What if we are given a test example whose feature vector $\\x$ was different than *every* training example $\\x^\\ip$\n",
     "\n",
     "The \"naive\" conditional independence assumption allows us\n",
     "- To have a single vector for each feature $\\x_1, \\x_2$ individually: total $|\\x_1| + |\\x_2|$\n",
