--- a/SVM_Coda.ipynb
+++ b/SVM_Coda.ipynb
@@ -154,24 +154,19 @@
    },
    "outputs": [],
    "source": [
+    "# Standard imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import decision_trees_helper as dthelp\n",
-    "%aimport decision_trees_helper\n",
+    "# Common imports\n",
+    "import os\n",
     "\n",
-    "import class_helper\n",
-    "%aimport class_helper\n",
+    "import svm_helper\n",
+    "%aimport svm_helper\n",
+    "svmh = svm_helper.SVM_Helper()\n",
     "\n",
-    "import os \n",
-    "\n",
-    "TITANIC_PATH = os.path.join(\"./external/jack-dies\", \"data\")\n",
-    "\n",
-    "train_data_titanic = pd.read_csv( os.path.join(TITANIC_PATH, \"train.csv\") )\n",
-    "test_data_titanic  = pd.read_csv( os.path.join(TITANIC_PATH, \"test.csv\")  )\n",
-    "\n",
-    "from IPython.display import Image\n"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -182,16 +177,15 @@
     }
    },
    "source": [
+    "# SVM for Regression\n",
     "\n",
+    "SVM's can be used not only for Classification but for Regression as well.\n",
     "\n",
-    "# Intro and Terminology\n",
+    "For Classification, the Loss function tries to fit all training examples *outside* the buffer zone.\n",
     "\n",
-    "Decision trees\n",
-    "- Are a structured sequence of questions\n",
-    "- That recursively partitions the universe of possible examples\n",
-    "- May be used for both Classification and Regression tasks\n",
+    "For Regression, the Loss function tries to fit all training examples *within* the buffer zone.\n",
     "\n",
-    "Let's visit the notebook for an [example and terminology](Decision_Trees.ipynb#Decision-Tree-Terminology)"
+    "- This is analogous to forcing training examples to be close to the fitted line"
    ]
   },
   {
@@ -202,14 +196,18 @@
     }
    },
    "source": [
-    "# Training\n",
+    "# Importance of normalization of $\\x$\n",
     "\n",
-    "As you've seen, a Decision Tree is really nothing more than a structured series of questions.\n",
+    "Imagine that the various components of $\\x$ are on vastly different scales\n",
+    "- suppose $\\x_1$ is in \"billions of units\" (so $\\x_1$ is small) but $\\x_2$ is in single units (large)\n",
     "\n",
-    "Thus, the parameters $\\Theta$, which will be discovered by training (as usual), consists of\n",
-    "- A specification of the structure (parent/child relationships)\n",
-    "- An encoding of the \"best\" question to ask at each node\n",
-    "- A class prediction on the leaf nodes"
+    "Then parameter $\\Theta_1$ (which multiplies $\\x_1$) will likely be much smaller than $\\Theta_2$.\n",
+    "\n",
+    "The Margin Penalty, which tries to reduce the value of elements of $\\Theta$ will thus\n",
+    "be more likely to reduce $\\Theta_2$ than $\\Theta_1$ for no reason other than the disparate scales.\n",
+    "\n",
+    "As we saw in our lecture on transformations, this is a danger with cost functions that\n",
+    "include a penalty for parameters magnitude."
    ]
   },
   {
@@ -220,11 +218,12 @@
     }
    },
    "source": [
-    "## High level view\n",
+    "The disparate scales of features in $\\x$ can also affect some transformations.\n",
     "\n",
-    "We start with a high level introduction to the algorithm that constructs a decision tree.\n",
+    "For the Gaussian RBF, the 2-norm will be dominated by the larger dimension, almost to the exclusion of smaller dimensions.\n",
     "\n",
-    "Let's visit the notebook section on [training](Decision_Trees.ipynb#Training)"
+    "Thus, if the chosen $\\phi$ is sensitive to scale (such as the Gaussian RBF) it's important to normalize the training set (across each dimension of features) so that\n",
+    "all features (elements of $\\x$) are on similar scale."
    ]
   },
   {
@@ -235,49 +234,15 @@
     }
    },
    "source": [
-    "## Deeper view: creating the test\n",
+    "# SVM Drawbacks\n",
     "\n",
-    "At this point we have a rough idea of the algorithm.\n",
+    "## Complexity\n",
+    "The SVM may utilize up to $m$ landmarks from the vectors among the training set.\n",
     "\n",
-    "There are still unanswered questions\n",
-    "- How to choose the test/question at each node\n",
-    "- Is there a better point at which to stop ?\n",
+    "These landmarks are referred to as \"support vectors\".\n",
     "\n",
-    "Let's visit the notebook section [Training: a deeper look](Decision_Trees.ipynb#Training:-a-deeper-look-at-the-algorithm)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Decision Trees for Regression\n",
-    "\n",
-    "It might seem surprising to use a Classification model (discrete targets) for a Regression task (continuous targets).\n",
-    "\n",
-    "The notebook section [Decision Tree Regression](Decision_Trees.ipynb#Decision-Tree-Regression) shows just how to do that."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Overfitting\n",
-    "\n",
-    "If we continue the training algorithm to it conclusion\n",
-    "- We wind up with leaf nodes that are pure (all examples in same category)\n",
-    "- Potentially have leaf nodes with small number of examples\n",
-    "\n",
-    "Thus, the danger of overfitting (poor out of sample generalization) is present.\n",
-    "\n",
-    "Let's go to the notebook for an [example](Decision_Trees.ipynb#Overfitting-example)"
+    "As $m$ may be very large\n",
+    "- SVM models may consume a lot of memory (in the test phase, not just when being fit)."
    ]
   },
   {
@@ -288,69 +253,13 @@
     }
    },
    "source": [
-    "# Hyper parameters\n",
+    "The choice of the complexity of a kernel depends on the relationship\n",
+    "between $m$, the number of training examples, and $n$, the number of features.\n",
     "\n",
-    "We can control for the possibility of overfitting\n",
-    "- With hyper-parameters to control various aspects of training\n",
-    "\n",
-    "There are other hyper-parameters than affect performance.\n",
-    "\n",
-    "These hyper-parameters may be adjusted as part of Fine Tuning, or earlier.\n",
-    "\n",
-    "Let's go to the notebook for a quick introduction to [hyper-parameters](Hyper-parameters-for-Decision-Trees)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# The Good and the Bad of Decision Trees\n",
-    "\n",
-    "**The good**\n",
-    "\n",
-    "- Very fast prediction\n",
-    "    - Just a small number of comparisons\n",
-    "- Relatively interpretable\n",
-    "    - Can *explain* why prediction was made\n",
-    "    - Sequence of tests lead to prediction\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "**The bad**\n",
-    "- Prone to overfitting\n",
-    "- Interpretable ?\n",
-    "    - Does the answer to a *long* sequence of tests really clarify the choice ?\n",
-    "    - Explainable rather than understandable\n",
-    "- More procedural/less mathematical\n",
-    "    - Greedy tests: locally optimal but perhaps not globally"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Categorical variables: one more time\n",
-    "\n",
-    "In the Titanic Survival example used in this module\n",
-    "- We treated Pclass (Passenger class) as a categorical rather than a numeric feature\n",
-    "\n",
-    "The test applied by a node in a Decision Tree highlights the difference"
+    "- When $m$ is large (and large relative to $n, m \\gg n$) there is a lot of data on which to fit a complicated kernel.\n",
+    "    - however, when $m$ is really large, this can be expensive\n",
+    "- When $m$ is small, the lack of data for fitting suggests a simple, linear kernel or logistic regression\n",
+    "- when $n$ is small, simpler Kernels are Logistic Regression is suggested"
    ]
   },
   {
@@ -361,15 +270,52 @@
     }
    },
    "source": [
-    "- Consider Titanic Passenger Class `Pclass` $\\in \\{1,2,3\\}$\n",
-    "- As a numeric, `Pclass` implies an ordering (magnitude doesn't matter for Decision Tree split)\n",
-    "    - The test: $\\lnot (\\text{PClass} \\le 2)$\n",
-    "    - Is True for any example where $\\text{PClass} \\in \\{ 3 \\}$\n",
-    "- As a categorical\n",
-    "    - The test: $\\lnot \\text{Is}_{Pclass=2}$ \n",
-    "    - Is True for any example where $\\text{PClass} \\in \\{ 1, 3 \\}$\n",
+    "**Aside**\n",
+    "- The SVC Optimization problem is a type of Quadratic Programming problem\n",
+    "    - In the \"primal\" form of the equation: there are $m$ (number of examples) constraints\n",
+    "    - In the \"dual\" form of the equation, there are $n$ (number of features) constraints\n",
+    "- Kernels work on the dual form of the equation\n",
+    "    - So if $n'$, the number of transformed features, is much bigger than $m$, kernels may cost more than pre-processing transformations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# SVM in `sklearn`\n",
     "\n",
-    "Not the same !"
+    "`sklearn` has several SVM algorithms (using different optimization techniques) that, mathematically,\n",
+    "should yield equivalent results.\n",
+    "\n",
+    "The difference is that some optimize for time (faster solution) versus space (ability to handle bigger\n",
+    "training sets) versus being more general solvers.\n",
+    "\n",
+    "According to Geron (page 194), the following should be equivalent\n",
+    "- `LinearSVC(C=1, loss=\"hinge\")`\n",
+    "- `SVC(C=1,kernel=\"linear\")`\n",
+    "- `SGDClassifier(loss=\"hinge\", alpha=1/(m*C))`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Final words\n",
+    "\n",
+    "The SVM is very powerful, but it has a lot of moving parts\n",
+    "- Hinge Loss\n",
+    "- Large Margin Classification\n",
+    "- Kernel\n",
+    "\n",
+    "The power of the SVM comes in the tight integration of all these parts."
    ]
   },
   {
@@ -380,8 +326,30 @@
     }
    },
    "source": [
-    "The latter is probably what we had in mind, but `Pclass` as numeric does not give us this result.\n",
-    "- Arbitrary encodings are dangerous !  Treat variables with discrete values as categorical."
+    "Main take-aways\n",
+    "- The SVM offers you built-in transformations to help make the data set closer to being Linearly Separable\n",
+    "- You can use the kernel function even without understanding the transformation $\\phi$ that corresponds to it\n",
+    "- Some kernel functions have hyper-parameters\n",
+    "    - The SVM can solve for the best hyper-parameter\n",
+    "- SVM's can also be used for Regression tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Preview of Deep Learning\n",
+    "\n",
+    "Two SVM features\n",
+    "- The \"max\" function of the Hinge Loss\n",
+    "- The semi-automatic construction of synthetic features (kernels)\n",
+    "\n",
+    "will be key features of a different set of models using Deep Learning \n",
+    "that are the focus of the second half of this course."
    ]
   },
   {
@@ -438,7 +406,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "369.594px"
+    "width": "370.594px"
    },
    "toc_section_display": true,
    "toc_window_display": false
