--- a/SVM_Overview.ipynb
+++ b/SVM_Overview.ipynb
@@ -123,19 +123,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "$$\n",
-    "\\newcommand{\\o}{\\mathbf{o}}\n",
-    "$$\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -153,31 +140,64 @@
     "# Reload all modules imported with %aimport\n",
     "%load_ext autoreload\n",
     "%autoreload 1\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
+   "outputs": [],
    "source": [
-    "# Entropy, Cross Entropy, KL Divergence: deep dive\n",
+    "# Standard imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "The Cross Entropy cost function is omnipresent in Machine Learning\n",
-    "as many problems involve matching probability distributions.\n",
+    "# Common imports\n",
+    "import os\n",
     "\n",
-    "Although not strictly necessary, it may be interesting to explore this concept more deeply.\n",
+    "import math\n",
+    "from sklearn import svm\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "import svm_helper\n",
+    "%aimport svm_helper\n",
+    "svmh = svm_helper.SVM_Helper()\n",
+    "svm_ch = svm_helper.Charts_Helper(save_dir=\"/tmp\", visible=False)\n",
+    "\n",
+    "import class_helper\n",
+    "%aimport class_helper\n",
+    "\n",
+    "clh = class_helper.Classification_Helper()\n",
     "\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>TL;DR</b> \n",
-    "    <ul>\n",
-    "        <li>Cross Entropy measures the \"distance\" between two distributions </li>\n",
-    "            <li>You will often come across Cross Entropy and KL Divergence in  your future ML endeavours.</li>\n",
-    "        </div> "
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create files containing charts\n",
+    "create = False\n",
+    "\n",
+    "if create:\n",
+    "    file_map = svm_ch.create_charts()\n",
+    "    print(file_map)"
    ]
   },
   {
@@ -188,12 +208,12 @@
     }
    },
    "source": [
-    "# Entropy\n",
+    "# Support Vector Classifier (SVC)\n",
+    "We introduce another model for the Classification task: the Support Vector Classifier (SVC).\n",
     "\n",
-    "In order to understand *Cross* Entropy, we first try to explain *Entropy*.\n",
-    "- A measure of the randomness of a distribution\n",
-    "- Interpreted as the number of bits of information obtained from a single sample\n",
-    "- an alternative to Gini for deciding which variable/what threshold to use in constructing a Decision Tree"
+    "We motivate this classifier by some examples.\n",
+    "\n",
+    "Consider the following linearly separable dataset and two separating lines:"
    ]
   },
   {
@@ -204,13 +224,14 @@
     }
    },
    "source": [
-    "## What is a bit ?\n",
-    "- Amount of information need to reduce uncertainty by a factor of 2\n",
-    "\n",
-    "\n",
-    "### Example: what is a bit\n",
-    "\n",
-    "Here, a bit is the amount of information **not** a length of the message"
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Linear separating boundary</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/svm_sep_boundary.png\"></td>\n",
+    "    </tr>\n",
+    "</table>\n"
    ]
   },
   {
@@ -221,100 +242,242 @@
     }
    },
    "source": [
-    "**Simple case: two equally probable outcomes**\n",
+    "Is one separating line \"better\" than the other ?\n",
     "\n",
-    "Two outcomes: Rain, Sun\n",
-    "$$    \n",
-    "\\begin{array}{lll}\n",
-    "\\text{Rain} & .5 \\\\\n",
-    "\\text{Sun}  & .5\n",
+    "Intuitively,the first line feels more fragile\n",
+    "- The distance between the line and the closest example is smaller in the first plot than the second\n",
+    "- If the red point located exactly on the line moved a small amount, we would mis-classify it\n",
+    "- Not as likely to generalize out of sample as well\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Something else to consider:\n",
+    "- How sensitive is our classifier to additional examples *that are far from the original boundary*\n",
+    "\n",
+    "Consider the two rows in the plot below\n",
+    "- The second plot in each row adds a cluster of examples on the right side, mid-way"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Sensitivity to far-from-boundary examples</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/svm_sens.png\"></td>\n",
+    "    </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "As you can see\n",
+    "- Logistic Regression is sensitive\n",
+    "- SVC is not\n",
+    "\n",
+    "Why should points far away from the original separating boundary affect the fit ?\n",
+    "\n",
+    "The answer, of course, is the Loss function.\n",
+    "\n",
+    "We will see that the SVC uses a much different loss that has several advantages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The SVC introduces two additional separating lines that are parallel to the separating\n",
+    "boundary\n",
+    "- At a distance $\\margin$ on either side of the boundary\n",
+    "    - measured by length of a line orthogonal to the boundary \n",
+    "- $\\margin$ is called the *margin*\n",
+    "- These two lines define a \"buffer\" of width twice the margin\n",
+    "\n",
+    "We draw two plots with different size margins\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Margin</th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/svm_margin.png\"></td>\n",
+    "    </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The concept of margin helps to address the two issues raised above.\n",
+    "\n",
+    "- Given a choice of two separating boundaries (each with perfect separation)\n",
+    "    - The one with the larger margin is \"better\" \n",
+    "- An example that is correctly classified and lies *outside* the buffer\n",
+    "- Should not affect the Loss Function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "From the above examples\n",
+    "- It may not be possible to have both\n",
+    "    - A large margin and \n",
+    "    - A boundary that separates classes perfectly\n",
+    "    - The left plot, for example\n",
+    "\n",
+    "Requiring perfect separation and no examples in the buffer is called *Hard Margin* classification.\n",
+    "- Allowing either condition to be false is called *Soft Margin* classification\n",
+    "\n",
+    "A *Soft Margin* classifier allows violations but imposes a *penalty* (by increasing the Loss).\n",
+    "\n",
+    "An SVC classifier is a Soft Margin classifier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The main difference between an SVC and Logistic Regression classifier \n",
+    "- Different Loss functions\n",
+    "\n",
+    "The SVC Loss functions differs from Cross Entropy (used in Logistic Regression) in that\n",
+    "- There are examples with **zero** loss\n",
+    "- Those that are correctly classified and outside the buffer\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We will dig into the loss function for the SVC shortly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Support Vector Machines (SVM)\n",
+    "\n",
+    "We have seen that many datasets, in raw form, are not linearly separable.\n",
+    "\n",
+    "Transformations of the raw data must be applied to induce Linear Separability.\n",
+    "\n",
+    "A *Support Vector Machine*  combines\n",
+    "- Transformations specialized for the mathematics of an SVC\n",
+    "- An SVC\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "There is a special subclass of transformation functions called **kernel functions** that\n",
+    "- Uses a clever mathematical trick \n",
+    "- To achieve the effect of applying an expensive transformation\n",
+    "- Without actually creating transformed data !\n",
+    "\n",
+    "The SVM helps to automate  the transformations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Key concepts\n",
+    "\n",
+    "Just like Logistic Regression, the SVC will:\n",
+    "- Use the features $\\x^\\ip$ to compute a \"score\" $\\hat{s}^\\ip$\n",
+    "- Compare the predicted score to a threshold\n",
+    "- Predict Positive if the score exceeds the threshold; Negative otherwise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The score is linear in the features\n",
+    "$$\\begin{array}[lll]\\\\\n",
+    "s(\\x) = \\Theta^T \\x & \\text{score} \\\\\n",
+    "s(\\x) = 0 & \\text{equation of separating boundary} \\\\\n",
     "\\end{array}\n",
     "$$\n",
-    "\n",
-    "Uncertainty about Rain is .5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "If I tell you that it will Rain (so $p_{\\text{Rain}}$ goes from $0.5$ to $1$)  the uncertainty is reduced\n",
-    "by a factor of\n",
     "$$\n",
-    "{1 \\over .5} = 2\n",
-    "$$\n",
-    "\n",
-    "$\\log_2 (2) = 1$ \n",
-    "\n",
-    "so this conveyed 1 bit of *information* regardless of how many *physical* bits were sent.\n",
-    "\n",
-    "**Definition of a bit: Uncertainty reduction of a factor of 2**\n",
-    "\n",
-    "One bit reduces uncertainty ($1/p$) by a factor of $2$.\n",
-    "\n",
-    "$\\log_2 (1/p) = - \\log_2(p)$ "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Simple case: 4 equally probable outcomes**\n",
-    "\n",
-    "4 outcomes: Rain, Sun, Clouds, Drizzle\n",
-    "$$    \n",
-    "\\begin{array}{lll}\n",
-    "\\text{Rain} & .25 \\\\\n",
-    "\\text{Sun}  & .25 \\\\\n",
-    "\\text{Clouds} & .25 \\\\\n",
-    "\\text{Drizzle} & .25\n",
-    "\\end{array}\n",
-    "$$\n",
-    "\n",
-    "Uncertainty about Rain is .25.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "If I tell you that it will Rain (so $p_{\\text{Rain}}$ goes from $0.25$ to $1$) I've reduced the uncertainty\n",
-    "by a factor of\n",
-    "$$\n",
-    "{1 \\over .25} = 4\n",
-    "$$\n",
-    "\n",
-    "This is $- \\log_2 (.25) = 2$ bits of information."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Outcomes with arbitrary probabilities**\n",
-    "\n",
-    "Two outcomes with unequal probability: Rain, Sun\n",
-    "$$    \n",
-    "\\begin{array}{lll}\n",
-    "\\text{Rain} & .25 \\\\\n",
-    "\\text{Sun}  & .75\n",
-    "\\end{array}\n",
+    "\\hat{\\y}^\\ip = \n",
+    "\\left\\{\n",
+    "    {\n",
+    "    \\begin{array}{lll}\n",
+    "     \\text{Negative} & \\textrm{if } \\hat{s}^\\ip   < 0  &  \\\\\n",
+    "      \\text{Positive}& \\textrm{if } \\hat{s}^\\ip \\ge 0  \n",
+    "    \\end{array}\n",
+    "    }\n",
+    "\\right.\n",
     "$$"
    ]
   },
@@ -326,170 +489,20 @@
     }
    },
    "source": [
-    "If I tell you that it will Rain (so $p_{\\text{Rain}} = 1$) I've reduced the uncertainty\n",
-    "by\n",
-    "$$\n",
-    "{1 \\over .25} = 4\n",
-    "$$\n",
+    "The SVC and SVM incorporate several \"tricks\"\n",
+    "- A clever Loss Function (Hinge Loss)\n",
+    "- Large Margin Classification\n",
+    "- Kernel Transformations\n",
     "\n",
-    "so this is $\\log_2 (2) = 2$ bits of information.\n",
+    "The combined effect can be overwhelming and makes the SVC/SVM seem complex\n",
+    "- and it *does* involve a bit of math\n",
     "\n",
-    "If I tell you that there will be Sun (so $p_{\\text{Sun}} = 1$) I've reduced the uncertainty\n",
-    "by\n",
-    "$$\n",
-    "{1 \\over .75}\n",
-    "$$\n",
-    "\n",
-    "so this is $- \\log_2 (0.75) = 0.415$ bits of information.\n",
-    "\n",
-    "In this case, the number of bits I convey to you is different depending on the message."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Average number of bits in a sample\n",
-    "\n",
-    "The average number of bits (*information*) in a sample randomly drawn from the distribution is\n",
-    "\n",
-    "$\n",
-    "H_i = -\\sum\\limits_{k=1 \\atop p_{i,k} \\ne 0}^{n}{{p_{i,k}}\\log_2(p_{i,k})}\n",
-    "$\n",
-    "\n",
-    "For the 75%/25% case above\n",
-    "\n",
-    "$\n",
-    "H_i = 0.75 * 0.415 + 0.25 * 2 = 0.81\n",
-    "$\n",
-    "\n",
-    "25% of the time I give you 2 bits of information; 75% of the time only 0.415 bits \n",
-    "\n",
-    "\n",
-    "This is also called the **entropy**\n",
-    "\n",
-    "It measures the unpredictability of the distribution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Entropy: a measure of randomness of a distribution\n",
-    "\n",
-    "Consider a *pure distribution*: one in which all probability is concentrated at a single value $k$\n",
-    "\n",
-    "$$\n",
-    "p_{i,k} = 1\n",
-    "$$\n",
-    "\n",
-    "A pure distribution has 0 entropy  since $\\log(p_{i,k}) = 0$\n",
-    "\n",
-    "On the other hand, consider a (binary) distribution in which each outcome has equal probability ($50 \\%$)\n",
-    "\n",
-    "$$\n",
-    "\\begin{array}[lll] \\\\\n",
-    "H_i  & = & -\\sum\\limits_{k \\in \\{0,1\\}}{{p_{i,k}}\\log_2(p_{i,k})}\\\\\n",
-    "& = & -\\sum\\limits_{k \\in \\{0,1\\}}{ 0.5 \\log_2(0.5)}\\\\\n",
-    "& = & 1\n",
-    "\\end{array}\n",
-    "$$\n",
-    "\n",
-    "So Entropy is a proxy for non-uniformity of a distribution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Cross entropy, KL Divergence\n",
-    "\n",
-    "Whereas Entropy measured the randomness of a single distribution,\n",
-    "Cross Entropy measures the \"distance\" between two probability distributions $p$ and $q$.\n",
-    "\n",
-    "We will call $p$ the *true* distribution and $q$ the estimated distribution.\n",
-    "\n",
-    "\n",
-    "**Cross entropy between two discrete probability distributions $p$ and $q$:**\n",
-    "\n",
-    "$ H(p, q) = -\\sum\\limits_{x}p(x) \\log q(x) $\n",
-    "\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Similar to Entropy interpretation as weighted sum of bits but \n",
-    "- uses true probability $p$ as weights\n",
-    "- uses estimated probability $q$ to measure the bits\n",
-    "\n",
-    "When estimated distribution $q$ is a prediction $\\hat{\\y}$ produced by a model\n",
-    "- Cross Entropy is a proxy for the difference between the true distribution $p$ and the model distribution $q$\n",
-    "- Our Classification Loss Function seeks to minimize this difference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "If distributions $p(x), q(x)$ are the same\n",
-    "- cross entropy equals entropy: $H(p,p) = H(p)$\n",
-    "\n",
-    "The difference \n",
-    "$(H(p,q) - H(p))$ is called the *Kullback-Leibler* or KL divergence."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Aside**\n",
-    "\n",
-    "There is another interpretation of Cross Entropy.\n",
-    "\n",
-    "We've seen that the amount of information depends on number of bits of each outcome $k$: $\\log_2(p_{i,k})$.\n",
-    "\n",
-    "$ H(p, q) = -\\sum\\limits_{x}p(x) \\log q(x) $\n",
-    "is the average number of bits if information is given by $q$\n",
-    "\n",
-    "If the number of bits  is different than $\\log_2(p_{i,k})$\n",
-    "- then this message $q$ is *optimal* in length\n",
-    "    - only if the distribution is some other $q_{i,k}$\n",
-    "    \n",
-    "The physical length will equal the information content only if $p(x) = q(x)$\n",
-    "\n",
-    "\n"
+    "We will try to reduce the complexity by tackling each trick separately.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -537,14 +550,9 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
-    "width": "368px"
-   },
+   "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
