--- a/Imbalanced_Data.ipynb
+++ b/Imbalanced_Data.ipynb
@@ -526,9 +526,13 @@
     }
    },
    "source": [
+    "## Is there a **simple** way to resample without cheating ?\n",
+    "\n",
     "We can resample during cross-validation by making the resampling step the first element of a Pipeline\n",
     "- See the lecture on Cross Validation without cheating\n",
-    "- BUT if we apply this Pipeline consistently (to both training and test examples)\n",
+    "- PROBLEM: we would also need to modify the target, which `sklearn` does not yet support\n",
+    "    - See [this proposal](https://scikit-learn-enhancement-proposals.readthedocs.io/en/latest/slep001/proposal.html) to enhance Transformers to support target transformation as well\n",
+    "- ISSUE: if we apply this Pipeline consistently (to both training and test examples)\n",
     "    - What does this do to the distribution of test examples ?\n",
     "    - It would make the training and test distributions similar IF we were given multiple test examples at once\n",
     "   - Real world behavior: test examples are presented \"on-line\": one at a time, not as a group\n",
@@ -774,7 +778,7 @@
     "width": "368px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
