--- a/Index.ipynb
+++ b/Index.ipynb
@@ -218,7 +218,7 @@
     }
    },
    "source": [
-    "    \n",
+    "# Week 6    \n",
     "**Plan**\n",
     "\n",
     "- Support Vector Classifiers: a classifier with an interesting twist\n",
